# libhomegear-ipc

./: .gitignore  CMakeLists.txt  README.md  configure.ac  getVersion.sh  makeRelease.sh
debian/: changelog  control  copyright  postrm  rules
src/: Ansi.cpp  Ansi.h  BinaryDecoder.cpp  BinaryDecoder.h  BinaryEncoder.cpp  BinaryEncoder.h  BinaryRpc.cpp  BinaryRpc.h  HelperFunctions.cpp  HelperFunctions.h  IIpcClient.cpp  IIpcClient.h  IQueue.cpp  IQueue.h  IQueueBase.cpp  IQueueBase.h  IpcException.h  IpcResponse.h  JsonDecoder.cpp  JsonDecoder.h  JsonEncoder.cpp  JsonEncoder.h  Makefile.am  Math.cpp  Math.h  Output.cpp  Output.h  RpcDecoder.cpp  RpcDecoder.h  RpcEncoder.cpp  RpcEncoder.h  RpcHeader.h  Variable.cpp  Variable.h
